# pysislab

./: LICENSE  README.md  pyproject.toml  setup.py
pysislab/: __init__.py  cli.py  get_sensors.py  models.py  tail.py
src/pysislab/: cli.py  list.py
tests/: test_api.py  test_cli.py
typings/msgpack/: __init__.pyi  ext.pyi  fallback.pyi
typings/websocket/: __init__.pyi  _abnf.pyi  _app.pyi  _cookiejar.pyi  _core.pyi  _exceptions.pyi  _handshake.pyi  _http.pyi  _logging.pyi  _socket.pyi  _ssl_compat.pyi  _url.pyi  _utils.pyi  _wsdump.pyi
